--- a/frontend/index.html
+++ b/frontend/index.html
@@ -92,7 +92,7 @@
             <h2>ABOUT ME</h2>
 
             <p> Hi, I'm Jared Hammarth, <span>IT Support Specialist at <a href="https://econsortium.com">Econsortium</a></span>, <span> <a href="">Azure MVP</a></span>
-               and <span><a href="">YouTuber</a></span> focused on making cloud learning more accessible and less daunting for everyone. 
+               and <span><a href="">YouTuber</a></span> focused on building my cloud skills one project at a time!. 
                
          </br>
       </br>
