--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Jared Hammarths's Resume</title>
+	<title>resync-init</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
