--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,7 +29,7 @@
 
    <!-- Favicons
 	================================================== -->
-	<link rel="shortcut icon" href="favicon.png" >
+	<link rel="shortcut icon" href="favicon.png">
 
 </head>
 
@@ -273,7 +273,7 @@
                <li><a href=""><i class="fa fa-external-link"></i></a></li>
                <li><a href=""><i class="fa fa-instagram"></i></a></li>
                <li><a href=""><i class="fa fa-youtube"></i></a></li>
-               <li><a href="https://github.com/booluinji/azure-resume"><i class="fa fa-github"></i></a></li>
+               <li><a href="https://github.com/booluinji"><i class="fa fa-github"></i></a></li>
             </ul>
 
             <ul class="copyright">
