--- a/frontend/index.html
+++ b/frontend/index.html
@@ -119,6 +119,13 @@
               >IT Support Specialist at
               <a href="https://econsortium.com">Econsortium</a></span
             >, focused on building cloud skills one project at a time.
+            <br /><br />Feel free to download my
+            <a
+              href="files/Jared_Hammarth_7182023.pdf"
+              download
+              style="color: aqua"
+              >Resume</a
+            >.
           </p>
         </div>
 
