changes to Projects section

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -163,15 +163,6 @@
           </div>
           <!-- item end -->
 
-          <div class="row item">
-            <div class="twelve columns">
-              <h3>
-                Microsoft AZ-400: Designing and Implementing Microsoft Devops
-                Solutions
-              </h3>
-              <p class="info"><em class="date">In Progress</em></p>
-            </div>
-          </div>
           <!-- item end -->
         </div>
         <!-- main-col end -->
@@ -228,8 +219,34 @@
         <!-- main-col end -->
       </div>
       <!-- End Work -->
+      <div class="row work">
+        <div class="three columns header-col">
+          <h1><span>Projects</span></h1>
+        </div>
+
+        <div class="nine columns main-col">
+          <div class="row item">
+            <div class="twelve columns">
+              <h3>Azure Website</h3>
+              <p class="info">www.resync-init.dev </p>
+
+              <p>
+                <li>
+                  Personal website hosted on Azure using Azure Blob Storage,
+                  CosmosBD, Azure CDN, and Azure Functions. CI/CD intergration
+                  using Github. Click
+                  <a href="projects.html" target="_blank" style="color: aqua">here</a>
+                  for more details.
+                </li>
+              </p>
+            </div>
+          </div>
+          <!-- item end -->
+        </div>
+        <!-- main-col end -->
+      </div>
     </section>
-    <!-- Resume Section End-->
+    <!-- Project Section End-->
 
     <!-- footer
    ================================================== -->
