--- a/frontend/projects.html
+++ b/frontend/projects.html
@@ -26,16 +26,13 @@
         </header>
 
         <p class="description">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus nobis
-          ut perspiciatis minima quidem nisi, obcaecati, delectus consequatur
-          fuga nostrum iusto ipsam ducimus quibusdam possimus. Maiores non enim
-          numquam voluptatem?
+          <img src="files/azure-resume-layout.png" alt="azure-resume-layout" />
         </p>
       </div>
 
       <div class="accordion-content">
         <header>
-          <span class="title">What do you mean by Accordion?</span>
+          <span class="title">Future Project</span>
           <i class="fa-solid fa-plus"></i>
         </header>
 
@@ -48,7 +45,7 @@
       </div>
       <div class="accordion-content">
         <header>
-          <span class="title">What do you mean by Accordion?</span>
+          <span class="title">Future Project</span>
           <i class="fa-solid fa-plus"></i>
         </header>
 
@@ -71,7 +68,7 @@
       </div>
       <div class="accordion-content">
         <header>
-          <span class="title">What do you mean by Accordion?</span>
+          <span class="title">Future Project</span>
           <i class="fa-solid fa-plus"></i>
         </header>
 
