--- a/frontend/index.html
+++ b/frontend/index.html
@@ -80,13 +80,13 @@
               class="divider w-hidden-medium w-hidden-small w-hidden-tiny"
             ></div>
             <a
-              href="/frontend/index.html"
+              href="index.html"
               aria-current="page"
               class="nav-link w-nav-link w--current"
               >Home</a
-            ><a href="/frontend/pages/about.html" class="nav-link w-nav-link"
+            ><a href="about.html" class="nav-link w-nav-link"
               >About</a
-            ><a href="/frontend/pages/contact.html" class="nav-link w-nav-link"
+            ><a href="contact.html" class="nav-link w-nav-link"
               >Contact</a
             >
             <div class="divider"></div>
