--- a/frontend/about.html
+++ b/frontend/about.html
@@ -87,7 +87,7 @@
               aria-current="page"
               class="nav-link w-nav-link w--current"
               >About</a
-            ><a href="/frontend/pages/contact.html" class="nav-link w-nav-link">Contact</a>
+            ><a href="contact.html" class="nav-link w-nav-link">Contact</a>
             <div class="divider"></div>
             <div class="social-link-group">
               <a href="#" class="social-icon-link w-inline-block"
