--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -86,7 +86,7 @@
             
             ><a href="about.html" class="nav-link w-nav-link">About</a
             ><a
-              href="/frontend/pages/contact.html"
+              href="contact.html"
               aria-current="page"
               class="nav-link w-nav-link w--current"
               >Contact</a
