--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -82,7 +82,7 @@
             <div
               class="divider w-hidden-medium w-hidden-small w-hidden-tiny"
             ></div>
-            <a href="index.html"nav-link w-nav-link">Home</a
+            <a href="index.html"nav-link w-nav-link>Home</a
             
             ><a href="about.html" class="nav-link w-nav-link">About</a
             ><a
