--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -77,13 +77,13 @@
           <nav role="navigation" class="navigation-menu w-nav-menu">
             <p
               class="main-subheading w-hidden-medium w-hidden-small w-hidden-tiny"
-              
-            >IT Support Specialist Econsortium</p>
+            >
+              IT Support Specialist Econsortium Site count : <a id="count"></a>
+            </p>
             <div
               class="divider w-hidden-medium w-hidden-small w-hidden-tiny"
             ></div>
             <a href="index.html" class="nav-link w-nav-link">Home</a
-            
             ><a href="about.html" class="nav-link w-nav-link">About</a
             ><a
               href="contact.html"
@@ -108,7 +108,10 @@
                   src="https://uploads-ssl.webflow.com/65202d6bce79d9ced0c3521e/65202d6cce79d9ced0c352a0_social-15-white.svg"
                   width="25"
                   alt="" /></a
-              ><a href="https://github.com/booluinji" target="_blank" class="social-icon-link w-inline-block"
+              ><a
+                href="https://github.com/booluinji"
+                target="_blank"
+                class="social-icon-link w-inline-block"
                 ><img
                   src="https://uploads-ssl.webflow.com/65202d6bce79d9ced0c3521e/65202d6cce79d9ced0c352da_social-33-white.svg"
                   width="25"
@@ -118,7 +121,10 @@
                   src="https://uploads-ssl.webflow.com/65202d6bce79d9ced0c3521e/65202d6cce79d9ced0c3530a_social-07-white.svg"
                   width="25"
                   alt="" /></a
-              ><a href="https://www.linkedin.com/in/jared-hammarth" target="_blank"" class="social-icon-link w-inline-block"
+              ><a
+                href="https://www.linkedin.com/in/jared-hammarth"
+                target="_blank"
+                class="social-icon-link w-inline-block"
                 ><img
                   src="https://uploads-ssl.webflow.com/65202d6bce79d9ced0c3521e/65202d6cce79d9ced0c35308_social-09-white.svg"
                   width="25"
