--- a/frontend/about.html
+++ b/frontend/about.html
@@ -77,6 +77,7 @@
               class="main-subheading w-hidden-medium w-hidden-small w-hidden-tiny"
             >
              IT Support Specialist Econsortium
+             Site count : <a id="count"></a>
             </p>
             <div
               class="divider w-hidden-medium w-hidden-small w-hidden-tiny"
