--- a/frontend/about.html
+++ b/frontend/about.html
@@ -70,13 +70,13 @@
       >
         <div class="w-container">
           <a href="#" class="logo-link w-nav-brand"
-            ><h1 class="logo-text">Jared Hammarth</h1></a
+            ><h1 class="logo-text">About</h1></a
           >
           <nav role="navigation" class="navigation-menu w-nav-menu">
             <p
               class="main-subheading w-hidden-medium w-hidden-small w-hidden-tiny"
             >
-             IT Support Specialist Econsortium
+             IT Support Specialist Econsortium <br>
              Site count : <a id="count"></a>
             </p>
             <div
@@ -138,12 +138,14 @@
           
           <h4>Econsortium - June 2021 - Present</h4>
           <p>
-            <ul><li>Azure Cloud Administration</li>
-            <li>0365 suite Administration</li>
-            <li>Windows Server Administration</li>
-            <li>Virtualization Administration using VMWARE</li>
-            <li>Zero Trust Administration using Zscaler</li>
-            <li>Cato networks</li></ul>
+            <ul>
+              <li>Azure Cloud Administration</li>
+              <li>0365 suite Administration</li>
+              <li>Windows Server Administration</li>
+              <li>Virtualization Administration using VMWARE</li>
+              <li>Zero Trust Administration using Zscaler</li>
+              <li>Cato networks</li>
+           </ul>
           </p>
           <h4>Muscle Foods USA - May 2015 - June 2021 </h4>
           <p>
@@ -155,7 +157,7 @@
           </p>
           <br>
         </div>
-        <a href="/frontend/files/Jared_Hammarth_100523.pdf" download="Jared Hammarth Resume" class="button w-button">Download Resume</a>
+        <a href="Jared_Hammarth_100523.pdf" download="Jared Hammarth Resume" class="button w-button">Download Resume</a>
       </div>
     </div>
     <script
