--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- This site was created in Webflow. https://www.webflow.com --><!-- Last Published: Fri Oct 06 2023 17:01:14 GMT+0000 (Coordinated Universal Time) -->
 <html
-  data-wf-domain="azure-resume.webflow.io"
+  data-wf-domain="resync-init.dev"
   data-wf-page="65202d6cce79d9ced0c35264"
   data-wf-site="65202d6bce79d9ced0c3521e"
   data-wf-status="1"
@@ -18,7 +18,7 @@
       rel="preconnect"
       crossorigin="anonymous"
     />
-    <script src="main.js"></script>
+    <script src="main.js" type="text/javascript" title="Main JavaScript file"></script>
     <script
       src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"
       type="text/javascript"
