--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -79,7 +79,7 @@
               class="main-subheading w-hidden-medium w-hidden-small w-hidden-tiny"
             >
               IT Support Specialist Econsortium <br />Site count :
-              <a id="count"></a>
+              <a id="counter"></a>
             </p>
             <div
               class="divider w-hidden-medium w-hidden-small w-hidden-tiny"
