--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- This site was created in Webflow. https://www.webflow.com --><!-- Last Published: Fri Oct 06 2023 17:01:14 GMT+0000 (Coordinated Universal Time) -->
+<!-- 01 This site was created in Webflow. https://www.webflow.com --><!-- Last Published: Fri Oct 06 2023 17:01:14 GMT+0000 (Coordinated Universal Time) -->
 <html
   data-wf-domain="resync-init.dev"
   data-wf-page="65202d6cce79d9ced0c35264"
