updated menu buttons on main | Home --> Projects  About --> Resume

--- a/frontend/about.html
+++ b/frontend/about.html
@@ -70,24 +70,24 @@
       >
         <div class="w-container">
           <a href="#" class="logo-link w-nav-brand"
-            ><h1 class="logo-text">About</h1></a
+            ><h1 class="logo-text">Resume</h1></a
           >
           <nav role="navigation" class="navigation-menu w-nav-menu">
             <p
               class="main-subheading w-hidden-medium w-hidden-small w-hidden-tiny"
             >
-             IT Support Specialist Econsortium <br>
-             Site count : <a id="counter"></a>
+             IT Support Specialist Econsortium 
+             
             </p>
             <div
               class="divider w-hidden-medium w-hidden-small w-hidden-tiny"
             ></div>
-            <a href="index.html" class="nav-link w-nav-link">Home</a
+            <a href="index.html" class="nav-link w-nav-link">Projects</a
             ><a
               href="about.html"
               aria-current="page"
               class="nav-link w-nav-link w--current"
-              >About</a
+              >Resume</a
             ><a href="contact.html" class="nav-link w-nav-link">Contact</a>
             <div class="divider"></div>
             <div class="social-link-group">
