--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -78,14 +78,14 @@
             <p
               class="main-subheading w-hidden-medium w-hidden-small w-hidden-tiny"
             >
-              IT Support Specialist Econsortium <br />Site count :
-              <a id="counter"></a>
+              IT Support Specialist Econsortium 
+              
             </p>
             <div
               class="divider w-hidden-medium w-hidden-small w-hidden-tiny"
             ></div>
-            <a href="index.html" class="nav-link w-nav-link">Home</a
-            ><a href="about.html" class="nav-link w-nav-link">About</a
+            <a href="index.html" class="nav-link w-nav-link">Projects</a
+            ><a href="about.html" class="nav-link w-nav-link">Resume</a
             ><a
               href="contact.html"
               aria-current="page"
