--- a/frontend/index.html
+++ b/frontend/index.html
@@ -83,8 +83,8 @@
               href="index.html"
               aria-current="page"
               class="nav-link w-nav-link w--current"
-              >Home</a
-            ><a href="about.html" class="nav-link w-nav-link">About</a
+              >Projects</a
+            ><a href="about.html" class="nav-link w-nav-link">Resume</a
             ><a href="contact.html" class="nav-link w-nav-link">Contact</a>
             <div class="divider"></div>
             <div class="social-link-group">
