updated titles on main

--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -72,13 +72,13 @@
       >
         <div class="w-container">
           <a href="#" class="logo-link w-nav-brand"
-            ><h1 class="logo-text">Contact</h1></a
+            ><h1 class="logo-text">Jared Hammarth</h1></a
           >
           <nav role="navigation" class="navigation-menu w-nav-menu">
             <p
               class="main-subheading w-hidden-medium w-hidden-small w-hidden-tiny"
             >
-              IT Support Specialist Econsortium 
+              IT Support Specialist 
               
             </p>
             <div
