--- a/frontend/index.html
+++ b/frontend/index.html
@@ -73,7 +73,7 @@
             <p
               class="main-subheading w-hidden-medium w-hidden-small w-hidden-tiny"
             >
-              IT Support Specialist Econsortium <br />
+              IT Support Specialist  <br />
               Site count : <a id="counter"></a>
             </p>
             <div
