Added Azure website section in Projects

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -180,7 +180,7 @@
                     >
                   </li>
                   <li>
-                    Azure Functions to provide and Https trigger to store site
+                    Azure Functions to provide a Https trigger to store site
                     counter.
                     <a
                       href="https://learn.microsoft.com/en-us/azure/azure-functions/functions-overview?pivots=programming-language-csharp"
@@ -212,7 +212,7 @@
                   following this tutorial from ACG.
                   <a
                     href="https://youtu.be/ieYrBWmkfno?si=gQjN8xcw96kz5hUC"
-                  >Azure Website</a><br><br>
+                  >Building and hosting a website in Azure</a><br><br>
                   Since the video is over 2 years old, there are a few things that'll youll have to research and troubleshoot as It's not going to be a straight forward on some parts. This is a good thing as it will teach you how to debug and search for solutions. 
                 </p>
               </div>
