Added Azure website section in Projects

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -208,12 +208,16 @@
                 <h6>Thoughts :</h6>
                 <p>
                   This is an amazing project to begin with for people starting
-                  to get into cloud technologies. I would highly reccomend
+                  to get into cloud technologies. I would highly recommend
                   following this tutorial from ACG.
-                  <a
-                    href="https://youtu.be/ieYrBWmkfno?si=gQjN8xcw96kz5hUC"
-                  >Building and hosting a website in Azure</a><br><br>
-                  Since the video is over 2 years old, there are a few things that'll youll have to research and troubleshoot as It's not going to be a straight forward on some parts. This is a good thing as it will teach you how to debug and search for solutions. 
+                  <a href="https://youtu.be/ieYrBWmkfno?si=gQjN8xcw96kz5hUC"
+                    >Building and hosting a website in Azure</a
+                  ><br /><br />
+                  Since the video is over 2 years old, there are a few things
+                  that you'll have to research and troubleshoot as It's not
+                  going to be a straight forward on some parts. This is a good
+                  thing as it will teach you how to debug and search for
+                  solutions.
                 </p>
               </div>
             </div>
